<resources>
    <string name="app_name">Warehouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BFL Group</string>
    <string name="nav_header_subtitle">itsupport@bflgroup.ae</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_file">File</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
<<<<<<< HEAD
    <string name="app_version">13.25</string>
=======
    <string name="app_version">13.27</string>
>>>>>>> 114ae93cdc37b67452ebb64583bfea01e77bc65f
    <string name="menu_update_box_from_pallet">Update Box from Pallet </string>
    <string name="menu_chute_status_techno">Chute Status (Techno)</string>
    <string name="menu_chute_status_jafza">Chute Status (Jafza)</string>
    <string name="menu_building_auto">Building (Auto)</string>
    <string name="menu_building">Building</string>
    <string name="menu_transfer">Transfer</string>
    <string name="menu_production_receive">Receive Production</string>
    <string name="menu_building_delivery">Delivery</string>
    <string name="menu_black_box">Black Box</string>
    <string name="menu_rerturns_repair">Returns / Repairs</string>
    <string name="menu_bin_storage">Bin Storage</string>
    <string name="menu_chute_check_in_check_out_techno">Chute Check In / Out Techno</string>
    <string name="menu_chute_check_in_check_out_jafza">Chute Check In / Out (Jafza)</string>
    <string name="menu_chute_configuraion_techno">Chute Configuration (Techno)</string>
    <string name="menu_chute_configuraion_jafza">Chute Configuration (Jazfa)</string>
    <string name="menu_chute_check_in_check_out_detail_techno">Chute Check In / Out History (Techno)</string>
    <string name="menu_chute_check_in_check_out_detail_jafza">Chute Check In / Out History (Jafza)</string>
    <string name="menu_building_box">Auto Box Building (Techno)</string>
    <string name="menu_building_box_jafza">Auto Box Building (Jafza)</string>
    <string name="menu_building_cont_box">Container Box Building</string>
    <string name="menu_building_usa_box">Box Building TCM / USA</string>
    <string name="menu_building_pallet">Build Pallet From Boxes</string>
    <string name="menu_blue_tote_transfer">Blue Tote Transfer (To Gray Tote)</string>
    <string name="menu_blue_tote_euro_box">Blue Tote Transfer (To Euro Box)</string>
    <string name="menu_update_box_qnty">Update Box Quantity</string>
    <string name="menu_building_del_gin">GIN (Route)</string>
    <string name="menu_building_del_pallet">Pallet (Route)</string>
    <string name="menu_gin_verification">GIN Verification</string>
    <string name="menu_divsion_seperate">Remove item from Transfer</string>
    <string name="menu_bin_storage_put_away">Put Away (IN / OUT)</string>
    <string name="menu_bin_storage_put_away_multiple_tote">Put Away (IN / OUT) Multiple Tote</string>
    <string name="menu_bin_storage_put_away_history">Put Away (IN / OUT) History</string>
    <string name="menu_bin_storage_wave_pick">Bin Storage Wave Pick</string>
    <string name="menu_bin_storage_batch_in">Batch IN</string>
    <string name="menu_pallet_status">Pallet Status</string>
    <string name="menu_wh_department">WH Department GRN</string>
    <string name="menu_transfer_validate">Transfer Validation</string>
    <string name="menu_r1_wh_grn">R1 WH GRN</string>
    <string name="menu_shuttle_git">Shuttle GIT</string>
    <string name="menu_warehouse_gin">Warehouse GIN</string>
    <string name="menu_warehouse_grn">Warehouse GRN</string>
    <string name="menu_shuttle_task_create">Shuttle Task Create</string>
    <string name="menu_price_check">Item Pullout</string>
    <string name="menu_item_segregation">Item Segregation</string>
    <string name="menu_rfid_tag_register">RFID Tag/Sticker Register</string>
    <string name="menu_supplier_box_grn">Supplier BOX GRN</string>
    <string name="menu_3pl_grn">3PL WH GRN</string>
    <string name="menu_bin_storage_rack">Bin Storage Rack</string>
    <string name="menu_rack">Rack</string>
    <string name="menu_rack_in_out">Rack In / Out</string>
    <string name="menu_jafza_racks">Rack In / Out (JAFZA) </string>
    <string name="menu_stocktake">Warehouse Stock Take</string>
    <string name="menu_BoxReconcilation">Box Reconcilation</string>
    <string name="menu_rack_query">Rack Query</string>
    <string name="menu_show_pallets">Show Pallets Details</string>
    <string name="menu_rack_in_out_history">Rack In / Out History</string>
    <string name="menu_shop_return">Shop Returns</string>
    <string name="menu_shop_return_verify">Receive from Shop</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_stock_taking">Stock Taking</string>
    <string name="menu_generate_barcode">Generate Barcode</string>
    <string name="menu_build_Box">Build Box</string>
    <string name="menu_pallets_verification">Warehouse GIN Verification</string>
    <string name="menu_validate_tote">Validate Tote Id</string>
    <string-array name="rackInOut">
        <item>IN</item>
        <item>OUT</item>
    </string-array>
    <string-array name="vehicleType">
        <item>--select--</item>
        <item>5 Ton</item>
        <item>6 Ton</item>
        <item>8 Ton</item>
        <item>10 Ton</item>
        <item>20 FT</item>
        <item>40 FT</item>
    </string-array>
    <string-array name="vendor">
        <item>--select--</item>
        <item>BFL</item>
        <item>MDT</item>
        <item>PALM</item>
        <item>GSC</item>
        <item>LOGIX</item>
        <item>RTL</item>
        <item>RNT</item>
    </string-array>
    <!-- TODO: For sunmi printer -->
    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or conent error!</string>
    <string name="toast_10">Please set the printer as black label mode!</string>
    <string name="toast_11">Settings->System->Advanced->InnerPrinter-> set black mark function</string>
    <string name="toast_12">Please set the printer to label mode!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
